fixed contact page alignment for contact details and adjusted corresponding css

--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,6 @@ a {
 ul {
   list-style: none;
   padding: 0;
-  text-align: center;
 }
 
 img {
@@ -162,7 +161,6 @@ footer {
   min-height: 20px;
   background-repeat: no-repeat;
   background-size: 20px 20px;
-  padding: 0 0 0 30px;
   margin: 0 0 10px;
 }
 
